# aruco_standalone

./: CMakeLists.txt  README.md
include/opencv2/: aruco.hpp
include/opencv2/aruco/: charuco.hpp  dictionary.hpp
samples/: create_marker.cpp  detect_board.cpp
src/: aruco.cpp
